src/app/views/hub/hub.component.scss
h1{
  display: inline-block;
}
#changePwCard .input-group-text {
  width: 75px;
}
.iconColumn{
  width: 2rem;
  text-align:center;
}
.checkbox-wrapper{
  flex: 1;
  border-top-right-radius: 0.25rem;
  border-bottom-right-radius: 0.25rem;
  border: 1px solid #e4e7ea;
}
.ptr:hover{
  cursor: pointer;
}
.iconColumn .fa-warning{
  color: #dc3545;
}
.checkbox-wrapper-inline{
  display: flex;
  flex: 1;
  justify-content: center;
  align-items: center;
  max-width: 3em;
  border: 1px solid #e4e7ea;
}
.checkbox-wrapper{
  flex: 1;
  border-top-right-radius: 0.25rem;
  border-bottom-right-radius: 0.25rem;
  border: 1px solid #e4e7ea;
}
.switch{
  position: absolute;
  top: calc(50% - 0.75em);
  left: calc(50% - 1.4em);
}
#editUserModal .input-group-text{
  width: 84px;
}
.input-group > .form-control:not(:last-child), .input-group > .custom-select:not(:last-child) {
  border-top-right-radius: 0.25rem;
  border-bottom-right-radius: 0.25rem;
}
.no-radius{
  border-radius: 0 !important;
}
.switch-label2{
  margin:0 1em 0 0;
  line-height: 2.5em;
}
.public{
  float: right;
  line-height: 1.5em;
}

